--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         <activity android:name=".ui.ChatScreen"/>
         <activity
             android:name=".ui.SplashScreen"
+            android:launchMode="singleInstance"
+            android:noHistory="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
