--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.pdp_ai">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -9,9 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PDP_AI">
-        <activity android:name=".ui.ChatScreen"/>
+        <activity
+            android:name=".ui.ChatScreen"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.SplashScreen"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"
             android:launchMode="singleInstance"
             android:noHistory="true"
             android:exported="true">
